Распределенное хранилище master-master или master-slave
