# docs/api.swagger.json
@@ -1,13 +1,10 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "clock/clock.proto",
+    "title": "store/store.proto",
     "version": "version not set"
   },
   "tags": [
-    {
-      "name": "Clock"
-    },
     {
       "name": "Store"
     }
@@ -19,15 +16,14 @@
     "application/json"
   ],
   "paths": {
-    "/api/clock/now": {
-      "get": {
-        "summary": "Get current time by timezone",
-        "operationId": "Clock_Now",
+    "/api/store": {
+      "post": {
+        "operationId": "Store_Save",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/clockClockResponse"
+              "$ref": "#/definitions/storeStorageResponse"
             }
           },
           "default": {
@@ -39,14 +35,16 @@
         },
         "parameters": [
           {
-            "name": "timezone",
-            "in": "query",
-            "required": false,
-            "type": "string"
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/storeSaveRequest"
+            }
           }
         ],
         "tags": [
-          "Clock"
+          "Store"
         ]
       }
     },
@@ -57,7 +55,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/storeReadResponse"
+              "$ref": "#/definitions/storeStorageResponse"
             }
           },
           "default": {
@@ -73,42 +71,6 @@
             "in": "path",
             "required": true,
             "type": "string"
-          }
-        ],
-        "tags": [
-          "Store"
-        ]
-      },
-      "post": {
-        "operationId": "Store_Save",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/storeSaveResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "key",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/StoreSaveBody"
-            }
           }
         ],
         "tags": [
@@ -118,22 +80,6 @@
     }
   },
   "definitions": {
-    "StoreSaveBody": {
-      "type": "object",
-      "properties": {
-        "value": {
-          "type": "string"
-        }
-      }
-    },
-    "clockClockResponse": {
-      "type": "object",
-      "properties": {
-        "time": {
-          "type": "string"
-        }
-      }
-    },
     "protobufAny": {
       "type": "object",
       "properties": {
@@ -162,7 +108,7 @@
         }
       }
     },
-    "storeListResponse": {
+    "storeSaveRequest": {
       "type": "object",
       "properties": {
         "key": {
@@ -173,19 +119,14 @@
         }
       }
     },
-    "storeReadResponse": {
+    "storeStorageResponse": {
       "type": "object",
       "properties": {
+        "key": {
+          "type": "string"
+        },
         "value": {
           "type": "string"
-        }
-      }
-    },
-    "storeSaveResponse": {
-      "type": "object",
-      "properties": {
-        "status": {
-          "type": "boolean"
         }
       }
     }
